fixed alignment on zoom out and ca

--- a/src/components/Section1.module.css
+++ b/src/components/Section1.module.css
@@ -2,6 +2,9 @@
     width: 100vw;
     height: 100vh;
     background-image: linear-gradient(#1F1F1F,#000000);
+    justify-content: center;
+    align-items: center;
+    display: flex;
 }
 
 .subWrapper{
