--- a/src/components/Section2.module.css
+++ b/src/components/Section2.module.css
@@ -2,6 +2,9 @@
     width: 100vw;
     height: 100vh;
     background-image: linear-gradient(#000000,#1F1F1F);
+    justify-content: center;
+    align-items: center;
+    display: flex;
 }
 
 .subWrapper{
